--- a/Vitkund/Views/Home/myaccount.cshtml
+++ b/Vitkund/Views/Home/myaccount.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Vitkund.Models.tblAdmin
 @{
     ViewBag.Title = "myaccount";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -32,7 +32,7 @@
             <div class="col-lg-12">
                 <!-- Start Dashboard Top  -->
                 <div class="rbt-dashboard-content-wrapper">
-                   
+
                 </div>
                 <!-- End Dashboard Top  -->
                 <div class="row g-5">
@@ -44,7 +44,7 @@
 
                                     <div class="rbt-default-sidebar-wrapper">
                                         <div class="section-title mb--20">
-                                            <h6 class="rbt-title-style-2">Welcome, Anil</h6>
+                                            <h6 class="rbt-title-style-2">Welcome, @Model.Name</h6>
                                         </div>
                                         <nav class="mainmenu-nav">
                                             <ul class="dashboard-mainmenu rbt-default-sidebar-list">
@@ -63,7 +63,7 @@
                                         <nav class="mainmenu-nav">
                                             <ul class="dashboard-mainmenu rbt-default-sidebar-list">
                                                 <li><a href="#"><i class="feather-settings"></i><span>Settings</span></a></li>
-                                                <li><a href="index.html"><i class="feather-log-out"></i><span>Logout</span></a></li>
+                                                <li><a href="/Login"><i class="feather-log-out"></i><span>Logout</span></a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -86,7 +86,15 @@
                                         <div class="rbt-profile-content b2">Registration Date</div>
                                     </div>
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">February 25, 2025</div>
+                                        @if (Model.RegistrationDate.HasValue)
+                                        {
+                                            String date = @Model.RegistrationDate.Value.ToString("MMMM dd, yyyy");
+                                            <div class="rbt-profile-content b2">@date</div>
+                                        }
+                                        else
+                                        {
+                                            <div class="rbt-profile-content b2"></div>
+                                        }
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -95,8 +103,9 @@
                                     <div class="col-lg-4 col-md-4">
                                         <div class="rbt-profile-content b2">Name</div>
                                     </div>
+                                    <input type="hidden" id="hiddenuserid" value="@Model.Id" />
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">John</div>
+                                        <div class="rbt-profile-content b2">@Model.Name</div>
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -106,7 +115,7 @@
                                         <div class="rbt-profile-content b2">Father Name</div>
                                     </div>
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">Doe</div>
+                                        <div class="rbt-profile-content b2">@Model.FatherName</div>
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -116,7 +125,7 @@
                                         <div class="rbt-profile-content b2">Username</div>
                                     </div>
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">admin</div>
+                                        <div class="rbt-profile-content b2">@Model.Username</div>
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -126,7 +135,7 @@
                                         <div class="rbt-profile-content b2">Email</div>
                                     </div>
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">example@gmail.com</div>
+                                        <div class="rbt-profile-content b2">@Model.Email</div>
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -136,7 +145,7 @@
                                         <div class="rbt-profile-content b2">Phone Number</div>
                                     </div>
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">+1-202-555-0174</div>
+                                        <div class="rbt-profile-content b2">@Model.PhoneNumber</div>
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -146,7 +155,7 @@
                                         <div class="rbt-profile-content b2">City</div>
                                     </div>
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">Rohtak</div>
+                                        <div class="rbt-profile-content b2">@Model.City</div>
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -156,7 +165,7 @@
                                         <div class="rbt-profile-content b2">State</div>
                                     </div>
                                     <div class="col-lg-8 col-md-8">
-                                        <div class="rbt-profile-content b2">Haryana</div>
+                                        <div class="rbt-profile-content b2">@Model.State</div>
                                     </div>
                                 </div>
                                 <!-- End Profile Row  -->
@@ -185,7 +194,7 @@
                                                 <span class="title">Password</span>
                                             </a>
                                         </li>
-                                      
+
                                     </ul>
                                 </div>
 
@@ -197,42 +206,42 @@
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                                 <div class="rbt-form-group">
                                                     <label for="firstname">Name</label>
-                                                    <input id="firstname" type="text" value="John">
+                                                    <input id="firstname" type="text" value="@Model.Name">
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                                 <div class="rbt-form-group">
-                                                    <label for="lastname">Father Name</label>
-                                                    <input id="lastname" type="text" value="Due">
+                                                    <label for="Fathernametxtbox">Father Name</label>
+                                                    <input id="Fathernametxtbox" type="text" value="@Model.FatherName">
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                                 <div class="rbt-form-group">
-                                                    <label for="username">City</label>
-                                                    <input id="username" type="text" value="johndue">
+                                                    <label for="Citytxtbox">City</label>
+                                                    <input id="Citytxtbox" type="text" value="@Model.City">
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                                 <div class="rbt-form-group">
-                                                    <label for="skill">State</label>
-                                                    <input id="skill" type="text" value="State">
+                                                    <label for="Statetxtbox">State</label>
+                                                    <input id="Statetxtbox" type="text" value="@Model.State">
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                                 <div class="rbt-form-group">
-                                                    <label for="phonenumber">Phone Number</label>
-                                                    <input id="phonenumber" type="tel" value="+1-202-555-0174">
+                                                    <label for="phonenumbertxtbox">Phone Number</label>
+                                                    <input id="phonenumbertxtbox" type="tel" value="@Model.PhoneNumber">
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                                 <div class="rbt-form-group">
-                                                    <label for="skill">User Name</label>
-                                                    <input id="skill" type="text" value="State">
+                                                    <label for="Usernametxtbox">User Name</label>
+                                                    <input id="Usernametxtbox" type="text" value="@Model.Username">
                                                 </div>
                                             </div>
                                             <div class="col-12 mt--20">
                                                 <div class="rbt-form-group">
-                                                    <a class="rbt-btn btn-gradient" href="#">Update Info</a>
+                                                    <a class="rbt-btn btn-gradient" href="javascript:void(0);" onclick="UpdateAdminDetails()">Update Info</a>
                                                 </div>
                                             </div>
                                         </form>
@@ -256,27 +265,19 @@
                                             </div>
                                             <div class="col-12">
                                                 <div class="rbt-form-group">
-                                                    <label for="retypenewpassword">Re-type New Password</label>
+                                                    <label for="retypenewpassword">Re-type New Password</label><span id="passwordmatch" style="color:red"></span>
                                                     <input id="retypenewpassword" type="password" placeholder="Re-type New Password">
                                                 </div>
                                             </div>
                                             <div class="col-12 mt--10">
                                                 <div class="rbt-form-group">
-                                                    <a class="rbt-btn btn-gradient" href="#">Update Password</a>
+                                                    <a class="rbt-btn btn-gradient" href="javascript:void(0);" onclick="UpdatePassword()">Update Password</a>
                                                 </div>
                                             </div>
                                         </form>
                                         <!-- End Profile Row  -->
                                     </div>
-
-                                 
-
                                 </div>
-
-
-
-
-
                             </div>
                         </div>
                         <!-- End Instructor Profile  -->
@@ -288,4 +289,64 @@
         </div>
     </div>
 </div>
+<script>
+    function UpdateAdminDetails() {
+        var Id = $("#hiddenuserid").val();
+        var Name = $("#firstname").val();
+        var Fathername = $("#Fathernametxtbox").val();
+        var City = $("#Citytxtbox").val();
+        var State = $("#Statetxtbox").val();
+        var phonenumber = $("#phonenumbertxtbox").val();
+        var Username = $("#Usernametxtbox").val();
+        var tblAdmin = { Id: Id, Username: Username, Name: Name, FatherName: Fathername, City: City, State: State, PhoneNumber: phonenumber }
+        $.ajax({
+            type: 'POST',
+            url: '/Home/UpdateProfileDetails',
+            data: JSON.stringify({ tbladmin: tblBusinessideadata }),
+            traditional: true,
+            contentType: 'application/json; charset=utf-8',
+            datatype: 'json',
+            success: function (result) {
+                debugger
+                alert(result.message);
+                window.location.reload();
 
+            },
+            error: function (result) {
+            }
+        });
+    }
+    function UpdatePassword() {
+        var id = $("#hiddenuserid").val();
+        var Currentpassword = $("#currentpassword").val();
+        var Newpassword = $("#newpassword").val();
+        var RetypePassword = $("#retypenewpassword").val();
+        if (Currentpassword == "" && Newpassword == "") {
+            alert('Please Enter Current Password and New Password!');
+        }
+        else {
+            if (Newpassword == RetypePassword) {
+                $("#passwordmatch").text("");
+                $.ajax({
+                    type: 'POST',
+                    url: '/Home/UpdatePassword',
+                    data: JSON.stringify({ Id: id, CurrentPassword: Currentpassword, NewPassword: Newpassword }),
+                    traditional: true,
+                    contentType: 'application/json; charset=utf-8',
+                    datatype: 'json',
+                    success: function (result) {
+                        debugger
+                        alert(result.message);
+                        window.location.reload();
+
+                    },
+                    error: function (result) {
+                    }
+                });
+            }
+            else {
+                $("#passwordmatch").text("Password Does not match.");
+            }
+        }
+    }
+</script>
