--- a/Vitkund/Views/Home/BusinessIdeaDetail.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeaDetail.cshtml
@@ -36,7 +36,7 @@
             <!-- Start Course Top  -->
             <div class="rbt-course-top-wrapper mt--40 mt_sm--20">
                 <div class="container">
-                    <div class="row g-5 align-items-center">
+                    <div class="row g-5 align-items-center" style="display:none">
 
                         <div class="col-lg-5 col-md-12">
                             <div class="rbt-sorting-list d-flex flex-wrap align-items-center">
@@ -73,7 +73,7 @@
                     </div>
 
                     <!-- Start Filter Toggle  -->
-                    <div class="default-exp-wrapper default-exp-expand">
+                    <div class="default-exp-wrapper default-exp-expand" style="display:none">
                         <div class="filter-inner">
                             <div class="filter-select-option">
                                 <div class="filter-select rbt-modern-select">
