--- a/Vitkund/Views/Home/Signup.cshtml
+++ b/Vitkund/Views/Home/Signup.cshtml
@@ -1,4 +1,10 @@
-﻿<!-- Start breadcrumb Area -->
+﻿
+<style>
+    span {
+    font-size:15px;
+    }
+</style>
+<!-- Start breadcrumb Area -->
 <div class="rbt-breadcrumb-default ptb--50 ptb_md--50 ptb_sm--30 bg-gradient-1">
     <div class="container">
         <div class="row">
@@ -32,36 +38,43 @@
 
                         <div class="row g-5">
                             <div class="col-md-6 col-12">
-                                <label>Name*</label><span id="maxvalspanname" style="color:red"></span><span id="validationMessageforname" style="color:red"></span><span id="requiredvalidationforname" style="color:red"></span>
+                                <label>Name*</label>
                                 <input type="text" id="Nametxtbox" placeholder="Your Name">
+                                <span id="maxvalspanname" style="color:red"></span><span id="validationMessageforname" style="color:red"></span><span id="requiredvalidationforname" style="color:red"></span>
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>Your Father Name*</label><span id="maxvalspanfathername" style="color:red"></span><span id="validationMessageforfathername" style="color:red"></span><span id="requiredvalidationforfathername" style="color:red"></span>
+                                <label>Your Father Name*</label>
                                 <input type="text" id="fathernametxtbox" placeholder="Father Name">
+                                <span id="maxvalspanfathername" style="color:red"></span><span id="validationMessageforfathername" style="color:red"></span><span id="requiredvalidationforfathername" style="color:red"></span>
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>City *</label><span id="maxvalspandistrict" style="color:red"></span><span id="validationMessagefordistrict" style="color:red"></span><span id="requiredvalidationfordistrict" style="color:red"></span>
+                                <label>City *</label>
                                 <input type="text" id="districttxbox" placeholder="Your City">
+                                <span id="maxvalspandistrict" style="color:red"></span><span id="validationMessagefordistrict" style="color:red"></span><span id="requiredvalidationfordistrict" style="color:red"></span>
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>State *</label><span id="maxvalspanstate" style="color:red"></span><span id="validationMessageforstate" style="color:red"></span><span id="requiredvalidationforstate" style="color:red"></span>
+                                <label>State *</label>
                                 <input type="text" id="statetxtbox" placeholder="Your State">
+                                <span id="maxvalspanstate" style="color:red"></span><span id="validationMessageforstate" style="color:red"></span><span id="requiredvalidationforstate" style="color:red"></span>
                             </div>
 
                             <div class="col-md-6 col-12">
-                                <label>Mobile Number *</label><span id="validationMessagemobileno" style="color:red"></span><span id="maxvalmobileno" style="color:red"></span><span id="requiredvalidationformobileno" style="color:red"></span>
+                                <label>Mobile Number *</label>
                                 <input type="text" id="mobilenotxtbox" placeholder="Your Mobile No. ">
+                                <span id="validationMessagemobileno" style="color:red"></span><span id="maxvalmobileno" style="color:red"></span><span id="requiredvalidationformobileno" style="color:red"></span>
                             </div>
                             <div class="col-md-6 col-12">
-                                <label>User Name / Email *</label><span id="maxvalspanusername" style="color:red"></span><span id="validationMessageforusername" style="color:red"></span><span id="requiredvalidationforusername" style="color:red"></span>
+                                <label>User Name / Email *</label>
                                 <input type="text" id="Usernametxtbox" placeholder="Enter User Name">
+                                <span id="maxvalspanusername" style="color:red"></span><span id="validationMessageforusername" style="color:red"></span><span id="requiredvalidationforusername" style="color:red"></span>
                             </div>
                             <div class="col-md-6 col-12">
-                                <label>Password *</label><span id="passwordError" style="color: red;"></span><span id="requiredvalidationforpassword" style="color:red"></span>
+                                <label>Password *</label>
                                 <input type="password" id="Passwordtxtbox" placeholder="Your Password">
+                                <span id="passwordError" style="color: red;"></span><span id="requiredvalidationforpassword" style="color:red"></span>
                             </div>
                             <div class="plceholder-button mt--50">
                                 <button onclick="Signup()" type="button" class="rbt-btn btn-gradient hover-icon-reverse">
@@ -205,9 +218,8 @@
             }
         });
         $('#Usernametxtbox').on('input', function () {
-            var maxLength = 20;
+            var maxLength = 50;
             var inputValue = $(this).val();
-            var containsSpecialChars = /[!#$%^&*()_+{}\[\]:;<>,.?~\\/-]/.test(inputValue);
             if (inputValue.length > maxLength) {
                 var trimmedValue = inputValue.substring(0, maxLength);
                 $(this).val(trimmedValue);
@@ -215,14 +227,6 @@
             }
             else {
                 $("#maxvalspanusername").text("");
-            }
-            if (containsSpecialChars) {
-                usernamevalidation = false;
-                $('#validationMessageforusername').text('Special characters are not allowed.');
-            }
-            else {
-                usernamevalidation = true;
-                $('#validationMessageforusername').text('');
             }
         });
         $('#Passwordtxtbox').on('input', function () {
@@ -264,46 +268,46 @@
         var username = $("#Usernametxtbox").val();
         var password = $("#Passwordtxtbox").val();
         if (name == "") {
-            $("#requiredvalidationforname").val("Required!");
+            $("#requiredvalidationforname").text("Enter Name!");
         }
         else {
-            $("#requiredvalidationforname").val("");
+            $("#requiredvalidationforname").text("");
         }
         if (fathername == "") {
-            $("#requiredvalidationforfathername").val("Required!");
+            $("#requiredvalidationforfathername").text("Enter Father Name!");
         }
         else {
-            $("#requiredvalidationforfathername").val("");
+            $("#requiredvalidationforfathername").text("");
         }
         if (district == "") {
-            $("#requiredvalidationfordistrict").val("Required!");
+            $("#requiredvalidationfordistrict").text("Enter City!");
         }
         else {
-            $("#requiredvalidationfordistrict").val("");
+            $("#requiredvalidationfordistrict").text("");
         }
         if (state == "") {
-            $("#requiredvalidationforstate").val("Required!");
+            $("#requiredvalidationforstate").text("Enter State!");
         }
         else {
-            $("#requiredvalidationforstate").val("");
+            $("#requiredvalidationforstate").text("");
         }
         if (mobileno == "") {
-            $("#requiredvalidationformobileno").val("Required!");
+            $("#requiredvalidationformobileno").text("Enter Mobile No!");
         }
         else {
-            $("#requiredvalidationformobileno").val("");
+            $("#requiredvalidationformobileno").text("");
         }
         if (username == "") {
-            $("#requiredvalidationforusername").val("Required!");
+            $("#requiredvalidationforusername").text("Enter Username!");
         }
         else {
-            $("#requiredvalidationforusername").val("");
+            $("#requiredvalidationforusername").text("");
         }
         if (password == "") {
-            $("#requiredvalidationforpassword").val("Required!");
+            $("#requiredvalidationforpassword").text("Enter Password!");
         }
         else {
-            $("#requiredvalidationforpassword").val("");
+            $("#requiredvalidationforpassword").text("");
         }
         if (name == "" || fathername == "" || district == "" || state == "" || mobileno == "" || username == "" || password == "") {
             validationreq = false;
