--- a/Vitkund/Views/Home/AddBusinessIdeas.cshtml
+++ b/Vitkund/Views/Home/AddBusinessIdeas.cshtml
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="mb-3">
-                                        <label>Short Description</label>&nbsp;<span style="color:red" id="validationMessage"></span><span style="color:red" id="maxvalspanshortdesc"></span><span style="color: red; display: none" id="shortdescrequired">Required !!</span>
+                                        <label>Short Description (Max Lengith 55)</label>&nbsp;<span style="color:red" id="validationMessage"></span><span style="color:red" id="maxvalspanshortdesc"></span><span style="color: red; display: none" id="shortdescrequired">Required !!</span>
                                         <input class="form-control" type="text" maxlength="55" id="shortDescriptiontxtbox" placeholder="Short Description">
 
                                     </div>
