--- a/Vitkund/Views/Home/Course.cshtml
+++ b/Vitkund/Views/Home/Course.cshtml
@@ -20,12 +20,6 @@
                         </ul>
                         <!-- End Breadcrumb Area  -->
 
-                        <div class=" title-wrapper">
-                            <h1 class="title mb--0">All Courses</h1>
-                            <a href="#" class="rbt-badge-2">
-                                <div class="image">🎉</div> 50 Courses
-                            </a>
-                        </div>
 
                         <p class="description">"India's most practical, experienced, down to earth, no imaginary talk platform, beyond Google knowledge.</p>
                     </div>
@@ -46,23 +40,13 @@
                                     <li class="course-switch-item"><button class="rbt-list-view" title="List Layout"><i class="feather-list"></i> <span class="text">List</span></button></li>
                                 </ul>
                             </div>
-                            <div class="rbt-short-item">
-                                <span class="course-index">Showing 1-4 of 4 results</span>
-                            </div>
+                           
                         </div>
                     </div>
 
                     <div class="col-lg-7 col-md-12">
                         <div class="rbt-sorting-list d-flex flex-wrap align-items-center justify-content-start justify-content-lg-end">
-                            <div class="rbt-short-item">
-                                <form action="#" class="rbt-search-style me-0">
-                                    <input type="text" placeholder="Search Your Course..">
-                                    <button type="submit" class="rbt-search-btn rbt-round-btn">
-                                        <i class="feather-search"></i>
-                                    </button>
-                                </form>
-                            </div>
-
+                           
                             <div class="rbt-short-item">
                                 <div class="view-more-btn text-start text-sm-end">
                                     <button class="discover-filter-button discover-filter-activation rbt-btn btn-white btn-md radius-round">Filter<i class="feather-filter"></i></button>
@@ -90,45 +74,6 @@
                         </div>
 
                         <div class="filter-select-option">
-                            <div class="filter-select rbt-modern-select">
-                                <span class="select-label d-block">Short By Author</span>
-                                <select data-live-search="true" title="Select Author" multiple data-size="7" data-actions-box="true" data-selected-text-format="count > 2">
-                                    <option data-subtext="Experts">Janin Afsana</option>
-                                    <option data-subtext="Experts">Joe Biden</option>
-                                    <option data-subtext="Experts">Fatima Asrafy</option>
-                                    <option data-subtext="Experts">Aysha Baby</option>
-                                    <option data-subtext="Experts">Mohamad Ali</option>
-                                    <option data-subtext="Experts">Jone Li</option>
-                                    <option data-subtext="Experts">Alberd Roce</option>
-                                    <option data-subtext="Experts">Zeliski Noor</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="filter-select-option">
-                            <div class="filter-select rbt-modern-select">
-                                <span class="select-label d-block">Short By Offer</span>
-                                <select>
-                                    <option>Free</option>
-                                    <option>Paid</option>
-                                    <option>Premium</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="filter-select-option">
-                            <div class="filter-select rbt-modern-select">
-                                <span class="select-label d-block">Short By Category</span>
-                                <select data-live-search="true">
-                                    <option>Web Design</option>
-                                    <option>Graphic</option>
-                                    <option>App Development</option>
-                                    <option>Figma Design</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="filter-select-option">
                             <div class="filter-select">
                                 <span class="select-label d-block">Price Range</span>
 
@@ -147,8 +92,6 @@
                                         </div>
                                     </form>
                                 </div>
-
-
                             </div>
                         </div>
                     </div>
@@ -171,31 +114,10 @@
                     <div class="rbt-card variation-01 rbt-hover">
                         <div class="rbt-card-img">
                             <a href="#">
-                                <img src="~/Content/assets/images/course-online-01.jpg" alt="Card image">
-                                <div class="rbt-badge-3 bg-white">
-                                    <span>-40%</span>
-                                    <span>Off</span>
-                                </div>
+                                <img src="~/Content/assets/images/course-online-01.jpg" alt="Card image" />
                             </a>
                         </div>
                         <div class="rbt-card-body">
-                            <div class="rbt-card-top">
-                                <div class="rbt-review">
-                                    <div class="rating">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <span class="rating-count"> (15 Reviews)</span>
-                                </div>
-                                <div class="rbt-bookmark-btn">
-                                    <a class="rbt-round-btn" title="Bookmark" href="#">
-                                        <i class="feather-bookmark"></i>
-                                    </a>
-                                </div>
-                            </div>
 
                             <h4 class="rbt-card-title">
                                 <a href="#">Business Education</a>
@@ -226,27 +148,11 @@
                     <div class="rbt-card variation-01 rbt-hover">
                         <div class="rbt-card-img">
                             <a href="#">
-                                <img src="~/Content/assets/images/course-online-02.jpg" alt="Card image">
+                                <img src="~/Content/assets/images/course-online-02.jpg" alt="Card image" />
                             </a>
                         </div>
                         <div class="rbt-card-body">
-                            <div class="rbt-card-top">
-                                <div class="rbt-review">
-                                    <div class="rating">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <span class="rating-count"> (15 Reviews)</span>
-                                </div>
-                                <div class="rbt-bookmark-btn">
-                                    <a class="rbt-round-btn" title="Bookmark" href="#">
-                                        <i class="feather-bookmark"></i>
-                                    </a>
-                                </div>
-                            </div>
+                         
                             <h4 class="rbt-card-title">
                                 <a href="#">Ten Quick Tips For Business Education.</a>
                             </h4>
@@ -275,31 +181,12 @@
                     <div class="rbt-card variation-01 rbt-hover">
                         <div class="rbt-card-img">
                             <a href="#">
-                                <img src="~/Content/assets/images/course-online-03.jpg" alt="Card image">
-                                <div class="rbt-badge-3 bg-white">
-                                    <span>-10%</span>
-                                    <span>Off</span>
-                                </div>
+                                <img src="~/Content/assets/images/course-online-03.jpg" alt="Card image" />
+                               
                             </a>
                         </div>
                         <div class="rbt-card-body">
-                            <div class="rbt-card-top">
-                                <div class="rbt-review">
-                                    <div class="rating">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <span class="rating-count"> (5 Reviews)</span>
-                                </div>
-                                <div class="rbt-bookmark-btn">
-                                    <a class="rbt-round-btn" title="Bookmark" href="#">
-                                        <i class="feather-bookmark"></i>
-                                    </a>
-                                </div>
-                            </div>
+                            
                             <h4 class="rbt-card-title">
                                 <a href="#">What Will Business Education Be Like</a>
                             </h4>
@@ -326,32 +213,12 @@
                     <div class="rbt-card variation-01 rbt-hover">
                         <div class="rbt-card-img">
                             <a href="#">
-                                <img src="~/Content/assets/images/course-online-04.jpg" alt="Card image">
-                                <div class="rbt-badge-3 bg-white">
-                                    <span>-40%</span>
-                                    <span>Off</span>
-                                </div>
+                                <img src="~/Content/assets/images/course-online-04.jpg" alt="Card image" />
+                               
                             </a>
                         </div>
                         <div class="rbt-card-body">
-                            <div class="rbt-card-top">
-                                <div class="rbt-review">
-                                    <div class="rating">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <span class="rating-count"> (15 Reviews)</span>
-                                </div>
-                                <div class="rbt-bookmark-btn">
-                                    <a class="rbt-round-btn" title="Bookmark" href="#">
-                                        <i class="feather-bookmark"></i>
-                                    </a>
-                                </div>
-                            </div>
-
+                           
                             <h4 class="rbt-card-title">
                                 <a href="#">Difficult Things About Business Education.</a>
                             </h4>
