--- a/Vitkund/Views/Home/Plan.cshtml
+++ b/Vitkund/Views/Home/Plan.cshtml
@@ -51,7 +51,7 @@
                         </ul>
                     </div>
                     <div class="pricing-btn">
-                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                             <div class="icon-reverse-wrapper">
                                 <span class="btn-text">Buy Now</span>
                                 <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -91,7 +91,7 @@
                         </ul>
                     </div>
                     <div class="pricing-btn">
-                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                             <div class="icon-reverse-wrapper">
                                 <span class="btn-text">Buy Now</span>
                                 <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -130,7 +130,7 @@
                         </ul>
                     </div>
                     <div class="pricing-btn">
-                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                             <div class="icon-reverse-wrapper">
                                 <span class="btn-text">Buy Now</span>
                                 <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -170,7 +170,7 @@
                     </div>
 
                     <div class="pricing-btn">
-                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                        <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                             <div class="icon-reverse-wrapper">
                                 <span class="btn-text">Buy Now</span>
                                 <span class="btn-icon"><i class="feather-arrow-right"></i></span>
