--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -114,7 +114,7 @@
                     <div class="header-left rbt-header-content">
                         <div class="header-info">
                             <div class="logo">
-                                <a href="index">
+                                <a href="/">
                                     <img src="~/Content/assets/images/logo.png" alt="Education Logo Images">
                                 </a>
                             </div>
@@ -260,13 +260,13 @@
                         <nav class="mainmenu-nav">
                             <ul class="mainmenu">
 
-                                <li><a href="index">Home</a></li>
-                                <li><a href="about-us">About Us</a></li>
-                                <li><a href="course">Courses</a></li>
-                                <li><a href="plan">Plan</a></li>
-                                <li><a href="our-services">Our Services</a></li>
-                                <li><a href="faq">FAQ</a></li>
-                                <li><a href="contact-us">Contact Us</a></li>
+                                <li><a href="/index">Home</a></li>
+                                <li><a href="/about-us">About Us</a></li>
+                                <li><a href="/course">Courses</a></li>
+                                <li><a href="/plan">Plan</a></li>
+                                <li><a href="/our-services">Our Services</a></li>
+                                <li><a href="/faq">FAQ</a></li>
+                                <li><a href="/contact-us">Contact Us</a></li>
 
 
                             </ul>
@@ -505,13 +505,13 @@
 
             <nav class="mainmenu-nav">
                 <ul class="mainmenu">
-                    <li><a href="index">Home</a></li>
-                    <li><a href="about-us">About Us</a></li>
-                    <li><a href="course">Courses</a></li>
-                    <li><a href="our-services">Our Services</a></li>
-                    <li><a href="plan">Plan</a></li>
-                    <li><a href="faq">FAQ</a></li>
-                    <li><a href="contact-us">Contact Us</a></li>
+                    <li><a href="/index">Home</a></li>
+                    <li><a href="/about-us">About Us</a></li>
+                    <li><a href="/course">Courses</a></li>
+                    <li><a href="/our-services">Our Services</a></li>
+                    <li><a href="/plan">Plan</a></li>
+                    <li><a href="/faq">FAQ</a></li>
+                    <li><a href="/contact-us">Contact Us</a></li>
                 </ul>
             </nav>
 
@@ -608,22 +608,22 @@
                                 <h5 class="ft-title">Useful Links</h5>
                                 <ul class="ft-link">
                                     <li>
-                                        <a href="index">Home</a>
+                                        <a href="/index">Home</a>
                                     </li>
                                     <li>
-                                        <a href="about-us">About Us</a>
+                                        <a href="/about-us">About Us</a>
                                     </li>
                                     <li>
-                                        <a href="our-services">Services</a>
+                                        <a href="/our-services">Services</a>
                                     </li>
                                     <li>
-                                        <a href="faq">FAQ</a>
+                                        <a href="/faq">FAQ</a>
                                     </li>
                                     <li>
-                                        <a href="plan">Plan</a>
+                                        <a href="/plan">Plan</a>
                                     </li>
                                     <li>
-                                        <a href="videos">Course Videos</a>
+                                        <a href="/videos">Course Videos</a>
                                     </li>
                                 </ul>
                             </div>
@@ -634,21 +634,21 @@
                                 <h5 class="ft-title">Links</h5>
                                 <ul class="ft-link">
                                     <li>
-                                        <a href="contact-us">Contact Us</a>
+                                        <a href="/contact-us">Contact Us</a>
                                     </li>
                                     <li>
-                                        <a href="Trending-Business">Tranding Business</a>
+                                        <a href="/Trending-Business">Tranding Business</a>
                                     </li>
 
                                     <li>
                                         <a href="/business-ideas">Business Ideas</a>
                                     </li>
                                     <li>
-                                        <a href="gallery">Gallery</a>
+                                        <a href="/gallery">Gallery</a>
                                     </li>
 
                                     <li>
-                                        <a href="motivational-story">Motivational Story</a>
+                                        <a href="/motivational-story">Motivational Story</a>
                                     </li>
                                 </ul>
                             </div>
